--- a/style.css
+++ b/style.css
@@ -1,1 +1,43 @@
+h1{
+    font-family: Helvetica;
+    font-size: 100px;
+    font-weight: bold;
+    color: khaki;
+    text-align: center;
+    background-image: url('C:\Users\tecjo\Documents\GitHub\Dasmotos-arts\images\pattern.jpeg');
+}
 
+h2{
+    font-family: Helvetica;
+    font-size: 32px;
+    font-weight: bold;
+    color: white;  
+}
+
+
+#brushes{
+    background-color: mediumspringgreen;
+}
+
+#frames{
+    background-color: lightcoral;
+}
+
+#paint{
+    background-color: skyblue;
+}
+
+.price{
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    color: blue;
+}
+
+h3{
+    font-weight: bold;
+    font-size: 25;
+}
+
+p{
+    font-size: 18;
+}
