--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ h1{
     font-weight: bold;
     color: khaki;
     text-align: center;
-    background-image: url('C:\Users\tecjo\Documents\GitHub\Dasmotos-arts\images\pattern.jpeg');
+    background-image: url(https://content.codecademy.com/courses/freelance-1/unit-2/pattern.jpeg);
 }
 
 h2{
@@ -40,4 +40,8 @@ h3{
 
 p{
     font-size: 18;
+}
+
+*{
+    font-family: Helvetica;
 }
